# planet-sim

./: CMakeLists.txt
src/: Simulator.hpp  main.cpp
src/ECS/: component_array.cpp  component_array.hpp  component_manager.cpp  component_manager.hpp  coordinator.cpp  coordinator.hpp  ecs_definitions.cpp  ecs_definitions.hpp  entity_manager.cpp  entity_manager.hpp  registry.cpp  registry.hpp  system.hpp  system_manager.cpp  system_manager.hpp
src/components/: camera_component.hpp  collision_component.hpp  force_component.hpp  gravity_component.hpp  physics_component.hpp  rendering_component.hpp  transform_component.hpp  velocity_component.hpp
src/core/: Components.hpp  EntityManager.cpp  EntityManager.hpp  Simulator.cpp  Simulator.hpp  System.hpp  main.cpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/rendering/: RenderStructs.hpp  Renderer.cpp  Renderer.hpp  render_structs.hpp
src/systems/: camera_system.cpp  camera_system.hpp  debug_draw_system.cpp  debug_draw_system.hpp  force_integrator.hpp  gravity_system.hpp  mesh_generator_system.cpp  mesh_generator_system.hpp  rendering_system.cpp  rendering_system.hpp
